Updated every html page and Updated css for every page to make it look more visually appealing.

--- a/components/index.html
+++ b/components/index.html
@@ -25,12 +25,15 @@
     <main>
       <section id="home">
         <h1 class="headr">Gator Food Court</h1>
-        <p>
-          Welcome to the Gator Food Court application! Browse through food
-          options, check out menus, and discover services offered by food
-          vendors around SFSU.
-        </p>
+        <div class="welcome-text">
+          <p>
+            Welcome to the Gator Food Court application! Browse through food
+            options, check out menus, and discover services offered by food
+            vendors around SFSU.
+          </p>
+        </div>
       </section>
+      
       <div class="album-container">
         <h2 class="headr">Popular Restaurants</h1>
         <div class="gallery">
