--- a/components/shop.html
+++ b/components/shop.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shop - Gator Food Court</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="../styling/styles.css" />
   </head>
   <body>
@@ -30,14 +36,21 @@
       </section>
       <div class="cart-container">
         <div class="col-25">
-          <h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>4</b></span></h4>
+          <h4>
+            Cart
+            <span class="price" style="color: black"
+              ><i class="fa fa-shopping-cart"></i> <b>4</b></span
+            >
+          </h4>
           <p><a href="#">Cheese Burger</a> <span class="price">$15</span></p>
           <p><a href="#">Pizza</a> <span class="price">$5</span></p>
           <p><a href="#">Chicken Sandwich</a> <span class="price">$8</span></p>
           <p><a href="#">Diet Coke</a> <span class="price">$2</span></p>
-          <hr>
-          <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
-          <input type="submit" value="Continue to checkout" class="btn">
+          <hr />
+          <p>
+            Total <span class="price" style="color: black"><b>$30</b></span>
+          </p>
+          <input type="submit" value="Continue to checkout" class="btn" />
         </div>
       </div>
     </main>
