--- a/components/map.html
+++ b/components/map.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Map - Gator Food Court</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../styling/styles.css" />
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="map.html">Map</a>
-            <a href="menu.html">Menu</a>
-            <a href="shop.html">Shop</a>
-            <a href="reviews.html">Reviews</a>
-            <a href="specials.html">Specials</a>
-        </nav>
-        <div class="account-icon">
-            <a href="login.html">&#128100;</a>
-        </div>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="map.html">Map</a>
+        <a href="menu.html">Menu</a>
+        <a href="shop.html">Shop</a>
+        <a href="reviews.html">Reviews</a>
+        <a href="specials.html">Specials</a>
+      </nav>
+      <div class="account-icon">
+        <a href="login.html">&#128100;</a>
+      </div>
     </header>
     <main>
-        <section id="map">
-            <h1>SFSU Map For Food Vendors </h1>
-            <img src="images/map2.jpg" alt="A map of SFSU food vendors" />
-        </section>
+      <section id="map">
+        <h1>SFSU Map For Food Vendors</h1>
+        <img src="images/map2.jpg" alt="A map of SFSU food vendors" />
+      </section>
     </main>
     <footer>
-        <p>&copy; 2023 Gator Food Court. All rights reserved.</p>
+      <p>&copy; 2023 Gator Food Court. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
