Made restaurants clickable to navigate to Menu page

--- a/components/index.html
+++ b/components/index.html
@@ -37,45 +37,45 @@
       <div class="album-container">
         <h2 class="headr">Popular Restaurants</h1>
         <div class="gallery">
-          <a target="_blank">
+          <a href="./menu.html" target="_blank">
             <img src="./images/nizarios.avif" width="600" height="400" />
+            <div class="author">Nizario's Pizza</div>
           </a>
-          <div class="author">Nizario's Pizza</div>
         </div>
 
         <div class="gallery">
-          <a target="_blank">
+          <a href="./menu.html" target="_blank">
             <img src="./images/halal.png" width="600" height="400" />
+            <div class="author">Halal Gyro & Shawarma</div>
           </a>
-          <div class="author">Halal Gyro & Shawarma</div>
         </div>
 
         <div class="gallery">
-          <a target="_blank">
+          <a href="./menu.html" target="_blank">
             <img src="./images/subway600.jpeg" width="600" height="400" />
+            <div class="author">Subway</div>
           </a>
-          <div class="author">Subway</div>
         </div>
 
         <div class="gallery">
-          <a target="_blank">
+          <a href="./menu.html" target="_blank">
             <img src="./images/quicklyy.avif" width="600" height="400" />
+            <div class="author">Quickly</div>
           </a>
-          <div class="author">Quickly</div>
         </div>
 
         <div class="gallery">
-          <a target="_blank">
+          <a href="./menu.html" target="_blank">
             <img src="./images/gold.png"width="600" height="400" />
+            <div class="author">Gold Coast Grill</div>
           </a>
-          <div class="author">Gold Coast Grill</div>
         </div>
 
         <div class="gallery">
-          <a target="_blank">
+          <a href="./menu.html" target="_blank">
             <img src="./images/cafe101.png" width="600" height="400" />
+            <div class="author">Cafe 101</div>
           </a>
-          <div class="author">Cafe 101</div>
         </div>
       </div>
     </main>
