Made link open in the same tab

--- a/components/index.html
+++ b/components/index.html
@@ -37,42 +37,42 @@
       <div class="album-container">
         <h2 class="headr">Popular Restaurants</h1>
         <div class="gallery">
-          <a href="./menu.html" target="_blank">
+          <a href="./menu.html" target="_self">
             <img src="./images/nizarios.avif" width="600" height="400" />
             <div class="author">Nizario's Pizza</div>
           </a>
         </div>
 
         <div class="gallery">
-          <a href="./menu.html" target="_blank">
+          <a href="./menu.html" target="_self">
             <img src="./images/halal.png" width="600" height="400" />
             <div class="author">Halal Gyro & Shawarma</div>
           </a>
         </div>
 
         <div class="gallery">
-          <a href="./menu.html" target="_blank">
+          <a href="./menu.html" target="_self">
             <img src="./images/subway600.jpeg" width="600" height="400" />
             <div class="author">Subway</div>
           </a>
         </div>
 
         <div class="gallery">
-          <a href="./menu.html" target="_blank">
+          <a href="./menu.html" target="_self">
             <img src="./images/quicklyy.avif" width="600" height="400" />
             <div class="author">Quickly</div>
           </a>
         </div>
 
         <div class="gallery">
-          <a href="./menu.html" target="_blank">
+          <a href="./menu.html" target="_self">
             <img src="./images/gold.png"width="600" height="400" />
             <div class="author">Gold Coast Grill</div>
           </a>
         </div>
 
         <div class="gallery">
-          <a href="./menu.html" target="_blank">
+          <a href="./menu.html" target="_self">
             <img src="./images/cafe101.png" width="600" height="400" />
             <div class="author">Cafe 101</div>
           </a>
