Fixed minor issue in menu. clenaed up css a little

--- a/components/menu.html
+++ b/components/menu.html
@@ -84,7 +84,7 @@
               marinated lamb with tikka gravy over rice with spicy sauce on top
               and mayo.
             </p>
-            <p>Price : $14$</p>
+            <p>Price : $14</p>
             <button>Add to Cart</button>
           </div>
           <div class="menu-item uniform-menu-item">
