--- a/styling/styles.css
+++ b/styling/styles.css
@@ -76,7 +76,7 @@ footer {
 }
 
 /* Login styles... */
-section#login {
+#login {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -84,7 +84,7 @@ section#login {
   gap: 1rem;
 }
 
-section#login form {
+#login form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -93,15 +93,15 @@ section#login form {
   max-width: 300px;
 }
 
-section#login form input[type="text"],
-section#login form input[type="password"] {
+#login form input[type="text"],
+#login form input[type="password"] {
   width: 100%;
   padding: 0.5rem;
   border: 1px solid #5e2590;
   /* SFSU purple */
 }
 
-section#login form input[type="submit"] {
+#login form input[type="submit"] {
   cursor: pointer;
   background-color: #5e2590;
   /* SFSU purple */
@@ -111,24 +111,24 @@ section#login form input[type="submit"] {
   width: 100%;
 }
 
-section#login p {
+#login p {
   text-align: center;
 }
 
-section#login p a {
+#login p a {
   color: #5e2590;
   /* SFSU purple */
   text-decoration: none;
 }
 
-section#login p a:hover {
+#login p a:hover {
   color: #3c1957;
   /* Darker SFSU purple */
 }
 
 /* Signup  page */
 
-section#signup {
+n#signup {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -136,7 +136,7 @@ section#signup {
   gap: 1rem;
 }
 
-section#signup form {
+#signup form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -145,16 +145,16 @@ section#signup form {
   max-width: 300px;
 }
 
-section#signup form input[type="text"],
-section#signup form input[type="password"],
-section#signup form input[type="email"] {
+#signup form input[type="text"],
+#signup form input[type="password"],
+#signup form input[type="email"] {
   width: 100%;
   padding: 0.5rem;
   border: 1px solid #5e2590;
   /* SFSU purple */
 }
 
-section#signup form button {
+#signup form button {
   cursor: pointer;
   background-color: #5e2590;
   /* SFSU purple */
@@ -164,17 +164,17 @@ section#signup form button {
   width: 100%;
 }
 
-section#signup p {
+#signup p {
   text-align: center;
 }
 
-section#signup p a {
+#signup p a {
   color: #5e2590;
   /* SFSU purple */
   text-decoration: none;
 }
 
-section#signup p a:hover {
+#signup p a:hover {
   color: #3c1957;
   /* Darker SFSU purple */
 }
